Shang New Live/src/objects/Pricing_Factor__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Charge_Method__c</fullName>
        <label>Charge Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Charge_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Factor__c</fullName>
        <inlineHelpText>Eg: 0.9 for 90% of Applicable Rate (i.e. 10% Disc)</inlineHelpText>
        <label>Factor</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property Name</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Pricing Factor</relationshipLabel>
        <relationshipName>Pricing_Factor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tenant_Type__c</fullName>
        <label>Tenant Type (Price Factor)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tenant_Type</valueSetName>
        </valueSet>
    </fields>
    <label>Pricing Factor</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-PF-{000000}</displayFormat>
        <label>Pricing Factor ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Factor</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>